--- a/ORM/testcases/DataManagerAddTestcase/config.json
+++ b/ORM/testcases/DataManagerAddTestcase/config.json
@@ -1,6 +1,7 @@
 {
-  "jdbcDriver": "com.mysql.cj.jdbc.Driver",
-  "connectionUrl": "jdbc:mysql://localhost:3306/tmschool",
-  "username": "tmdbuser",
-  "password": "tmdbuser"
+  "JDBCDriver": "com.mysql.cj.jdbc.Driver",
+  "connectionURL": "jdbc:mysql://localhost:3306/tmschool",
+  "username": "tmsdbuser",
+  "password": "tmsdbuser",
+  "packaging": "com.thinking.machines.orm.testcases.pojos"
 }
